--- a/inst/rmarkdown/templates/my-slides/skeleton/assets/ucl-stats.css
+++ b/inst/rmarkdown/templates/my-slides/skeleton/assets/ucl-stats.css
@@ -12,7 +12,7 @@
   --code-font-is-google: 1;
   --base-font-size: 20px;
   --text-font-size: 1rem;
-  --code-font-size: 1rem; /*0.9rem;*/
+  --code-font-size: .85rem; /*0.9rem;*/
   --code-inline-font-size: 1em;
   --header-h1-font-size: 2.00rem;
   --header-h2-font-size: 1.50rem;
@@ -166,15 +166,19 @@ pre {
     font-size: 70%;
     background-image: linear-gradient(to right, rgb(0, 44, 83), rgb(100, 125, 151));
 }
+.my-footer a {
+  color: #D5D5D5;
+  border-bottom: 1px solid #D5D5D5;
+}
 .my-footer .alignleft {
   float: left;
   text-align: left;
-  width: 20%;
+  width: 25%;
 }
 .my-footer .aligncenter {
   float: left;
   text-align: center;
-  width: 55%;
+  width: 50%;
 }
 .my-footer .alignright {
   float: left;
