--- a/inst/quarto/gb.scss
+++ b/inst/quarto/gb.scss
@@ -336,3 +336,19 @@ section.has-dark-background a, section.has-dark-background a:hover {
   height: 90%;
   overflow-y: auto;
 }
+
+/* Creates a marker effect */
+.magic-marker {
+  margin: 0 -0.4em;
+  padding: 0.1em 0.4em;
+  border-radius: 0.8em 0.3em;
+  background: transparent;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 225, 0, 0.1),
+    rgba(255, 225, 0, 0.7) 4%,
+    rgba(255, 225, 0, 0.3)
+  );
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
