More elegant yml + title-page

--- a/inst/quarto/assets/gb.scss
+++ b/inst/quarto/assets/gb.scss
@@ -8,6 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 @import url('https://fonts.googleapis.com/css?family=Inconsolata:400,700');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap);
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
