Update scss for quarto to format links in Ubuntu font in the main slides but in Inter Tight in the footer

--- a/inst/quarto/assets/gb.scss
+++ b/inst/quarto/assets/gb.scss
@@ -135,6 +135,7 @@ section.has-dark-background h2 {
 
 .reveal a {
   color: #6e5400;
+  font-family: $font-family-monospace;
   letter-spacing: -0.025em;
 }
 
@@ -143,6 +144,7 @@ section.has-dark-background h2 {
 }
 
 .reveal .footer a {
+  font-family: $font-family-sans-serif;
   color: #C6AA51;
 }
 
