--- a/inst/quarto/assets/gb.scss
+++ b/inst/quarto/assets/gb.scss
@@ -135,16 +135,20 @@ section.has-dark-background h2 {
 
 .reveal a {
   color: #6e5400;
+  letter-spacing: -0.025em;
+}
+
+.reveal .slide a {
+  color: #6e5400;
   font-family: $font-family-monospace;
   letter-spacing: -0.025em;
 }
 
-.reveal a:hover {
+.reveal .slide a:hover {
   color: #516372;
 }
 
 .reveal .footer a {
-  font-family: $font-family-sans-serif;
   color: #C6AA51;
 }
 
