--- a/inst/quarto/assets/gb.scss
+++ b/inst/quarto/assets/gb.scss
@@ -91,6 +91,14 @@ section.has-dark-background h2 {
   background-size: 4.8em;
 }
 
+.reveal h3 {
+  color: #24568c;
+ }
+
+.reveal h3 {
+  color: #24568c;
+ }
+
 .reveal h2 img {
   position: absolute;
   right: 0%;
@@ -98,9 +106,6 @@ section.has-dark-background h2 {
   height: 100%;
  }
 
- .reveal h3, h4 {
-  color: #24568c;
- }
 
 .reveal .footer {
   color: #CCD1D5;
