Updata list of colours in the gb.scss file

--- a/inst/quarto/assets/gb.scss
+++ b/inst/quarto/assets/gb.scss
@@ -392,6 +392,12 @@ section.has-dark-background a, section.has-dark-background a:hover {
 .beamer-yellow {
   color: #fcd000;
 }
+.samp-blue {
+  color: #1B5497;
+}
+.samp-red {
+  color: #C21718;
+}
 
 /* This makes long tables included in tabsets scrollable vertically */
 .panel-tabset {
