Plays with title-slide for UCL and fix pt for all fonts

--- a/inst/quarto/_extensions/ucl/fonts.css
+++ b/inst/quarto/_extensions/ucl/fonts.css
@@ -11,3 +11,10 @@
   font-weight: 700;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "UCLSans";
+  src: url("fonts/UCLSans-SemiBold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
