Divider slide - need to think about proportioning of page...

--- a/inst/quarto/_extensions/ucl/ucl-new.scss
+++ b/inst/quarto/_extensions/ucl/ucl-new.scss
@@ -188,7 +188,7 @@ section.divider-bg h2,
 section.divider-bg h3,
 section.divider-bg p,
 section.divider-bg li {
-  margin-left: 22vw;
+  margin-left: 30%!important;
   margin-right: 3%;
   text-align: left;
   color: #fafafa;
